--- a/ML-EEG.ipynb
+++ b/ML-EEG.ipynb
@@ -19,8 +19,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import xgboost as xgb\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "import lightgbm as lgb\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
@@ -673,26 +673,28 @@
     "y = df['eyeDetection']\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=9)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=9)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "id": "7ef55e3a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Training data shape:\n",
-      "(10486, 14)\n",
-      "(10486,)\n",
+      "(11984, 14)\n",
+      "(11984,)\n",
       "\n",
       "Testing data shape:\n",
-      "(4494, 14)\n",
-      "(4494,)\n"
+      "(2996, 14)\n",
+      "(2996,)\n"
      ]
     }
    ],
@@ -708,37 +710,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c6e070",
+   "id": "a3961874",
    "metadata": {},
    "source": [
-    "## Evaluating The Random Forest Classifier Model"
+    "# Evaluating The Random Forest Classifier Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64dc1b95",
-   "metadata": {},
+   "id": "8364d19a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 93.10%\n",
+      "Accuracy: 93.6248%\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[2397  125]\n",
-      " [ 185 1787]]\n",
+      "[[1613   83]\n",
+      " [ 108 1192]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.95      0.94      2522\n",
-      "           1       0.93      0.91      0.92      1972\n",
+      "           0       0.94      0.95      0.94      1696\n",
+      "           1       0.93      0.92      0.93      1300\n",
       "\n",
-      "    accuracy                           0.93      4494\n",
-      "   macro avg       0.93      0.93      0.93      4494\n",
-      "weighted avg       0.93      0.93      0.93      4494\n",
+      "    accuracy                           0.94      2996\n",
+      "   macro avg       0.94      0.93      0.93      2996\n",
+      "weighted avg       0.94      0.94      0.94      2996\n",
       "\n"
      ]
     }
@@ -759,11 +763,11 @@
     "class_report = classification_report(y_test, y_pred)\n",
     "\n",
     "# Display the results\n",
-    "print(f'Accuracy: {accuracy * 100:.2f}%')\n",
+    "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
     "print('\\nConfusion Matrix:')\n",
     "print(conf_matrix)\n",
     "print('\\nClassification Report:')\n",
-    "print(class_report)\n"
+    "print(class_report)"
    ]
   },
   {
@@ -778,9 +782,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "e9610654",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -807,21 +809,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 93.41%\n",
+      "Accuracy: 93.6916%\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[2392  130]\n",
-      " [ 166 1806]]\n",
+      "[[1612   84]\n",
+      " [ 105 1195]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.94      0.95      0.94      2522\n",
-      "           1       0.93      0.92      0.92      1972\n",
+      "           0       0.94      0.95      0.94      1696\n",
+      "           1       0.93      0.92      0.93      1300\n",
       "\n",
-      "    accuracy                           0.93      4494\n",
-      "   macro avg       0.93      0.93      0.93      4494\n",
-      "weighted avg       0.93      0.93      0.93      4494\n",
+      "    accuracy                           0.94      2996\n",
+      "   macro avg       0.94      0.93      0.94      2996\n",
+      "weighted avg       0.94      0.94      0.94      2996\n",
       "\n"
      ]
     }
@@ -842,7 +844,7 @@
     "class_report = classification_report(y_test, y_pred)\n",
     "\n",
     "# Display the results\n",
-    "print(f'Accuracy: {accuracy * 100:.2f}%')\n",
+    "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
     "print('\\nConfusion Matrix:')\n",
     "print(conf_matrix)\n",
     "print('\\nClassification Report:')\n",
@@ -851,67 +853,176 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0869b59f",
+   "id": "56a9f1a6",
    "metadata": {},
    "source": [
-    "## Evaluating The K-Nearest Neighbors Classifier Model"
+    "# Evaluating The Catboost Classifier Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "583ef71b",
+   "id": "6a07102a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 82.93%\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[2137  385]\n",
-      " [ 382 1590]]\n",
+      "Requirement already satisfied: catboost in d:\\anaconda\\lib\\site-packages (1.2.2)\n",
+      "Requirement already satisfied: graphviz in d:\\anaconda\\lib\\site-packages (from catboost) (0.20.1)\n",
+      "Requirement already satisfied: matplotlib in d:\\anaconda\\lib\\site-packages (from catboost) (3.7.1)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in d:\\anaconda\\lib\\site-packages (from catboost) (1.24.3)\n",
+      "Requirement already satisfied: pandas>=0.24 in d:\\anaconda\\lib\\site-packages (from catboost) (1.5.3)\n",
+      "Requirement already satisfied: scipy in d:\\anaconda\\lib\\site-packages (from catboost) (1.10.1)\n",
+      "Requirement already satisfied: plotly in d:\\anaconda\\lib\\site-packages (from catboost) (5.9.0)\n",
+      "Requirement already satisfied: six in d:\\anaconda\\lib\\site-packages (from catboost) (1.16.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in d:\\anaconda\\lib\\site-packages (from pandas>=0.24->catboost) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in d:\\anaconda\\lib\\site-packages (from pandas>=0.24->catboost) (2022.7)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (4.25.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (23.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (9.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in d:\\anaconda\\lib\\site-packages (from matplotlib->catboost) (3.0.9)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in d:\\anaconda\\lib\\site-packages (from plotly->catboost) (8.2.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install catboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "12e38222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:\tlearn: 0.6694133\ttotal: 159ms\tremaining: 2m 39s\n",
+      "100:\tlearn: 0.3080345\ttotal: 1.02s\tremaining: 9.06s\n",
+      "200:\tlearn: 0.1962423\ttotal: 2.08s\tremaining: 8.26s\n",
+      "300:\tlearn: 0.1408635\ttotal: 3.24s\tremaining: 7.53s\n",
+      "400:\tlearn: 0.1052682\ttotal: 4.34s\tremaining: 6.49s\n",
+      "500:\tlearn: 0.0810313\ttotal: 5.42s\tremaining: 5.4s\n",
+      "600:\tlearn: 0.0633699\ttotal: 6.49s\tremaining: 4.3s\n",
+      "700:\tlearn: 0.0509081\ttotal: 7.55s\tremaining: 3.22s\n",
+      "800:\tlearn: 0.0411966\ttotal: 8.59s\tremaining: 2.13s\n",
+      "900:\tlearn: 0.0333915\ttotal: 9.63s\tremaining: 1.06s\n",
+      "999:\tlearn: 0.0275084\ttotal: 10.7s\tremaining: 0us\n",
+      "Accuracy: 95.0935%\n",
       "\n",
       "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.85      0.85      2522\n",
-      "           1       0.81      0.81      0.81      1972\n",
+      "           0       0.95      0.96      0.96      1696\n",
+      "           1       0.95      0.94      0.94      1300\n",
       "\n",
-      "    accuracy                           0.83      4494\n",
-      "   macro avg       0.83      0.83      0.83      4494\n",
-      "weighted avg       0.83      0.83      0.83      4494\n",
+      "    accuracy                           0.95      2996\n",
+      "   macro avg       0.95      0.95      0.95      2996\n",
+      "weighted avg       0.95      0.95      0.95      2996\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Standardize the features (mean=0, variance=1)\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "# Create a CatBoostClassifier instance with optional hyperparameters\n",
+    "cb = CatBoostClassifier(iterations=1000, depth=6, learning_rate=0.1, loss_function='Logloss', random_seed=9)\n",
     "\n",
-    "# Create a K-Nearest Neighbors classifier (you can adjust the number of neighbors)\n",
-    "model = KNeighborsClassifier(n_neighbors=5)\n",
+    "# Fit the model on the training data\n",
+    "cb.fit(X_train, y_train, verbose=100)\n",
     "\n",
-    "# Fit the model to the training data\n",
-    "model.fit(X_train, y_train)\n",
+    "# Predict on the test data\n",
+    "y_pred = cb.predict(X_test)\n",
     "\n",
-    "# Make predictions on the test data\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# Evaluate the model\n",
+    "# Calculate accuracy on the test set\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-    "class_report = classification_report(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
     "\n",
-    "# Display the results\n",
-    "print(f'Accuracy: {accuracy * 100:.2f}%')\n",
-    "print('\\nConfusion Matrix:')\n",
-    "print(conf_matrix)\n",
-    "print('\\nClassification Report:')\n",
-    "print(class_report)\n"
+    "# Generate a classification report\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "print(\"\\nClassification Report:\\n\", classification_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d46bd6f",
+   "metadata": {},
+   "source": [
+    "# Evaluating The Light GBM Classifier Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b7788b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 5423, number of negative: 6561\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001365 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 3511\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11984, number of used features: 14\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.452520 -> initscore=-0.190494\n",
+      "[LightGBM] [Info] Start training from score -0.190494\n",
+      "Accuracy: 95.1936%\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.96      0.96      1696\n",
+      "           1       0.95      0.94      0.94      1300\n",
+      "\n",
+      "    accuracy                           0.95      2996\n",
+      "   macro avg       0.95      0.95      0.95      2996\n",
+      "weighted avg       0.95      0.95      0.95      2996\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = lgb.Dataset(X_train, label=y_train)\n",
+    "\n",
+    "params = {\n",
+    "    'objective': 'binary',\n",
+    "    'metric': 'binary_logloss',\n",
+    "    'boosting_type': 'gbdt',\n",
+    "    'num_leaves': 31,\n",
+    "    'learning_rate': 0.05,\n",
+    "    'feature_fraction': 0.9\n",
+    "}\n",
+    "\n",
+    "num_boost_round = 1000  \n",
+    "early_stopping_rounds = 10  \n",
+    "valid_sets = [train_data]  \n",
+    "verbose_eval = 100  \n",
+    "\n",
+    "lgbm = lgb.train(\n",
+    "    params,\n",
+    "    train_data,\n",
+    "    num_boost_round=num_boost_round,\n",
+    ")\n",
+    "\n",
+    "y_pred_prob = lgbm.predict(X_test, num_iteration=lgbm.best_iteration)\n",
+    "y_pred = [1 if p > 0.5 else 0 for p in y_pred_prob]  \n",
+    "\n",
+    "# Calculate accuracy on the test set\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
+    "\n",
+    "# Generate a classification report\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "print(\"\\nClassification Report:\\n\", classification_rep)"
    ]
   },
   {
@@ -924,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "9c93b652",
    "metadata": {
     "scrolled": false
@@ -936,22 +1047,22 @@
      "text": [
       "Welcome to the AI Mental Fitness Tracker\n",
       "Fill in your details as requested to check your mental fitness .\n",
-      "Enter AF3 : 4312.31\n",
-      "Enter F7 : 4009.23\n",
-      "Enter F3 : 4270.26\n",
-      "Enter FC5 : 4134.36\n",
-      "Enter T7 : 4344.1\n",
-      "Enter P7 : 4600.51\n",
-      "Enter O1 : 4099.49\n",
-      "Enter O2 : 4629.23\n",
-      "Enter P8 : 4209.23\n",
-      "Enter T8 : 4240.51\n",
-      "Enter FC6 : 4213.33\n",
-      "Enter F4 : 4276.41\n",
-      "Enter F8 : 4621.54\n",
-      "Enter AF4 : 4380\n",
-      "Your eye is : [0]\n",
-      "Eyes are open\n"
+      "Enter AF3 : 4311.79\n",
+      "Enter F7 : 4014.87\n",
+      "Enter F3 : 4274.87\n",
+      "Enter FC5 : 4121.03\n",
+      "Enter T7 : 4339.49\n",
+      "Enter P7 : 4620\n",
+      "Enter O1 : 4093.33\n",
+      "Enter O2 : 4614.87\n",
+      "Enter P8 : 4198.97\n",
+      "Enter T8 : 4230.77\n",
+      "Enter FC6 : 4222.56\n",
+      "Enter F4 : 4301.03\n",
+      "Enter F8 : 4611.79\n",
+      "Enter AF4 : 4405.64\n",
+      "Eye State is : [1]\n",
+      "Your Eyes are closed\n"
      ]
     }
    ],
@@ -974,8 +1085,8 @@
     "F8 = float(input(\"Enter F8 : \"))\n",
     "AF4 = float(input((\"Enter AF4 : \")))\n",
     "\n",
-    "prediction = xg.predict([[AF3, F7, F3, FC5, T7, P7, O1, O2, P8, T8, FC6, F4, F8, AF4]])\n",
-    "print(\"Eye State is : {}\".format(prediction))\n",
+    "prediction = cb.predict([[AF3, F7, F3, FC5, T7, P7, O1, O2, P8, T8, FC6, F4, F8, AF4]])\n",
+    "print(\"\\nEye State is : {}\".format(prediction))\n",
     "\n",
     "if prediction == 0:\n",
     "    print('Your Eyes are open')\n",
