--- a/ML-EEG.ipynb
+++ b/ML-EEG.ipynb
@@ -772,6 +772,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "812e3095",
+   "metadata": {},
+   "source": [
+    "The random forest classifier achieved an accuracy of 93.62%, indicating a strong overall predictive performance. The confusion matrix reveals that it correctly predicted 1613 instances of class 0 and 1192 instances of class 1 while misclassifying 83 instances of class 0 and 108 instances of class 1. The classification report demonstrates high precision and recall for both classes (0 and 1), with F1-scores of 0.94 and 0.93, respectively, indicating a well-balanced model with good predictive capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2db2d964",
    "metadata": {},
    "source": [
@@ -853,6 +861,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0f1346c",
+   "metadata": {},
+   "source": [
+    "The XGBoost classifier achieved an accuracy of 93.69%, indicating strong overall predictive performance. In the confusion matrix, it correctly predicted 1612 instances of class 0 and 1195 instances of class 1 while misclassifying 84 instances of class 0 and 105 instances of class 1. The classification report shows high precision and recall for both classes (0 and 1), with F1-scores of 0.94 and 0.93, respectively, suggesting a well-balanced model with good predictive capabilities, similar to the random forest classifier's performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "56a9f1a6",
    "metadata": {},
    "source": [
@@ -905,18 +921,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.6694133\ttotal: 159ms\tremaining: 2m 39s\n",
-      "100:\tlearn: 0.3080345\ttotal: 1.02s\tremaining: 9.06s\n",
-      "200:\tlearn: 0.1962423\ttotal: 2.08s\tremaining: 8.26s\n",
-      "300:\tlearn: 0.1408635\ttotal: 3.24s\tremaining: 7.53s\n",
-      "400:\tlearn: 0.1052682\ttotal: 4.34s\tremaining: 6.49s\n",
-      "500:\tlearn: 0.0810313\ttotal: 5.42s\tremaining: 5.4s\n",
-      "600:\tlearn: 0.0633699\ttotal: 6.49s\tremaining: 4.3s\n",
-      "700:\tlearn: 0.0509081\ttotal: 7.55s\tremaining: 3.22s\n",
-      "800:\tlearn: 0.0411966\ttotal: 8.59s\tremaining: 2.13s\n",
-      "900:\tlearn: 0.0333915\ttotal: 9.63s\tremaining: 1.06s\n",
-      "999:\tlearn: 0.0275084\ttotal: 10.7s\tremaining: 0us\n",
+      "0:\tlearn: 0.6694133\ttotal: 150ms\tremaining: 2m 29s\n",
+      "100:\tlearn: 0.3080345\ttotal: 1.56s\tremaining: 13.9s\n",
+      "200:\tlearn: 0.1962423\ttotal: 3s\tremaining: 11.9s\n",
+      "300:\tlearn: 0.1408635\ttotal: 4.25s\tremaining: 9.88s\n",
+      "400:\tlearn: 0.1052682\ttotal: 5.38s\tremaining: 8.03s\n",
+      "500:\tlearn: 0.0810313\ttotal: 6.49s\tremaining: 6.46s\n",
+      "600:\tlearn: 0.0633699\ttotal: 7.61s\tremaining: 5.05s\n",
+      "700:\tlearn: 0.0509081\ttotal: 8.74s\tremaining: 3.73s\n",
+      "800:\tlearn: 0.0411966\ttotal: 10s\tremaining: 2.49s\n",
+      "900:\tlearn: 0.0333915\ttotal: 11.2s\tremaining: 1.24s\n",
+      "999:\tlearn: 0.0275084\ttotal: 12.4s\tremaining: 0us\n",
       "Accuracy: 95.0935%\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[1627   69]\n",
+      " [  78 1222]]\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -945,9 +965,21 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
     "\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "print('\\nConfusion Matrix:')\n",
+    "print(conf_matrix)\n",
+    "\n",
     "# Generate a classification report\n",
     "classification_rep = classification_report(y_test, y_pred)\n",
     "print(\"\\nClassification Report:\\n\", classification_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062445a9",
+   "metadata": {},
+   "source": [
+    "The CatBoost classifier delivered an impressive accuracy of 95.09%, highlighting its strong overall predictive performance. In the confusion matrix, it correctly predicted 1627 instances of class 0 and 1222 instances of class 1, with only 69 instances of class 0 and 78 instances of class 1 misclassified. The classification report demonstrates high precision and recall for both classes (0 and 1), with F1-scores of 0.96 and 0.94, respectively, underlining its excellent predictive capabilities and superior performance compared to previous classifiers."
    ]
   },
   {
@@ -960,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b7788b78",
    "metadata": {},
    "outputs": [
@@ -969,13 +1001,17 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 5423, number of negative: 6561\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001365 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001309 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 3511\n",
       "[LightGBM] [Info] Number of data points in the train set: 11984, number of used features: 14\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.452520 -> initscore=-0.190494\n",
       "[LightGBM] [Info] Start training from score -0.190494\n",
       "Accuracy: 95.1936%\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[1631   65]\n",
+      " [  79 1221]]\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -1020,9 +1056,22 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy * 100:.4f}%')\n",
     "\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "print('\\nConfusion Matrix:')\n",
+    "print(conf_matrix)\n",
+    "\n",
     "# Generate a classification report\n",
     "classification_rep = classification_report(y_test, y_pred)\n",
     "print(\"\\nClassification Report:\\n\", classification_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a7065c0",
+   "metadata": {},
+   "source": [
+    "The LightGBM classifier achieved an impressive accuracy of 95.19%, indicating strong overall predictive performance. In the confusion matrix, it correctly predicted 1631 instances of class 0 and 1221 instances of class 1, with only 65 instances of class 0 and 79 instances of class 1 misclassified. The classification report demonstrates high precision and recall for both classes (0 and 1), with F1-scores of 0.96 and 0.94, respectively, highlighting its excellent predictive capabilities and similarity to the CatBoost classifier's performance.\n",
+    "It has the highest accuracy than any other model used."
    ]
   },
   {
@@ -1035,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9c93b652",
    "metadata": {
     "scrolled": false
@@ -1045,32 +1094,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the AI Mental Fitness Tracker\n",
-      "Fill in your details as requested to check your mental fitness .\n",
-      "Enter AF3 : 4311.79\n",
-      "Enter F7 : 4014.87\n",
-      "Enter F3 : 4274.87\n",
-      "Enter FC5 : 4121.03\n",
-      "Enter T7 : 4339.49\n",
-      "Enter P7 : 4620\n",
-      "Enter O1 : 4093.33\n",
-      "Enter O2 : 4614.87\n",
-      "Enter P8 : 4198.97\n",
-      "Enter T8 : 4230.77\n",
-      "Enter FC6 : 4222.56\n",
-      "Enter F4 : 4301.03\n",
-      "Enter F8 : 4611.79\n",
-      "Enter AF4 : 4405.64\n",
-      "Eye State is : [1]\n",
-      "Your Eyes are closed\n"
+      "Fill in your details as requested to check your eye state.\n",
+      "Enter AF3 : 4284.1\n",
+      "Enter F7 : 3978.97\n",
+      "Enter F3 : 4252.82\n",
+      "Enter FC5 : 4109.23\n",
+      "Enter T7 : 4318.46\n",
+      "Enter P7 : 4614.36\n",
+      "Enter O1 : 4080\n",
+      "Enter O2 : 4611.28\n",
+      "Enter P8 : 4207.18\n",
+      "Enter T8 : 4241.54\n",
+      "Enter FC6 : 4207.69\n",
+      "Enter F4 : 4284.1\n",
+      "Enter F8 : 4593.33\n",
+      "Enter AF4 : 4364.1\n",
+      "\n",
+      "Eye State is : [0]\n",
+      "Your Eyes are open\n"
      ]
     }
    ],
    "source": [
-    "print(\"Welcome to the AI Mental Fitness Tracker\")\n",
-    "print(\"Fill in your details as requested to check your mental fitness .\")\n",
+    "print(\"Fill in your details as requested to check your eye state.\")\n",
     "\n",
-    "AF3 = float(input((\"Enter AF3 : \")))\n",
+    "AF3 = float(input((\"\\nEnter AF3 : \")))\n",
     "F7 = float(input(\"Enter F7 : \"))\n",
     "F3 = float(input(\"Enter F3 : \"))\n",
     "FC5 = float(input(\"Enter FC5 : \"))\n",
